# pacc

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.agents/skills/release-upgrade/: SKILL.md
.agents/skills/release-upgrade/agents/: openai.yaml
.agents/skills/release-upgrade/references/: release-checklist.md
src/: app.rs  domain.rs  main.rs  tui.rs
